--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -771,7 +771,7 @@ elseif(PSY_DRACO_COMPRESSION_ONLY)
       # we need to create a simple wrapper and compile it on visual studio 2015
       # - if we compile it onto a static lib, we will get linking error due to mismatch between two visual studio versions
       # - so, we're compiling the project as shared lib here
-      add_definitions(-DPSY_DRACO_EXPORT=1)
+      add_definitions(-DPSY_DRACO_EXPORT=1 -D_SCL_SECURE_NO_WARNINGS)
       add_library(psy_draco_compression SHARED ${psy_draco_compression_sources})
       set_target_properties(psy_draco_compression PROPERTIES SOVERSION 1)
   else()
